# drum-firmware

./: .clang-format  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONVENTIONS.md  Development-guidelines.md  GEMINI.md  LICENSE  README.md  build_experiments.sh  check_formatting.sh  convert_sample.py  convert_sample.sh  design.wiki  format.sh  fresh_deploy.sh  main.cpp  mypy.ini  package-lock.json  package.json  requirements.txt  run_tests.sh  set_python_path.sh  transfer_firmware.sh  ws2812.pio
drum/: CMakeLists.txt  README.md  audio_engine.cpp  audio_engine.h  build-ram.sh  build-release.sh  build-verbose.sh  build.sh  color.h  config.default.json  config.h  configuration_manager.cpp  configuration_manager.h  drum_pizza_hardware.h  drumpad_factory.cpp  drumpad_factory.h  events.h  factory_kit.cpp  file_ops.h  firmware_update_buyer.cpp  firmware_update_buyer.h  flash_access_coordinator.cpp  flash_access_coordinator.h  flash_safety_override.c  kit_definitions.h  main.cpp  memmap_xip_rodata_in_ram.ld  message_router.cpp  message_router.h  midi_functions.cpp  midi_functions.h  midi_manager.cpp  midi_manager.h  musin_log_config.h  note_event_queue.cpp  note_event_queue.h  parameter_handlers.cpp  parameter_handlers.h  partition_table.json  pizza_controls.cpp  (+50 more)
drum/config/: timing_config.h
drum/firmware/: bootrom_services.cpp  bootrom_services.h  update_interfaces.h
drum/sample_bank/: sample_bank.h
drum/sysex/: chunk.h  codec.h  data_transfer_protocol.h  firmware_payload_handler.h  firmware_update.h  firmware_update_protocol.h  payload_handler.h  protocol.h  sample_payload_handler.h  sds_dump_sender.h  sds_protocol.h  sequencer_state_codec.h  uf2_validator.h
drum/ui/: color.h  display_mode.cpp  display_mode.h  pizza_display.cpp  pizza_display.h
examples/flash_audio_streaming/: CMakeLists.txt  file_sound.h  main.cpp
examples/flash_rw/: CMakeLists.txt  main.cpp
examples/keypad_example/: CMakeLists.txt
examples/midi_example/: CMakeLists.txt  main.cpp
examples/pizza_example/: CMakeLists.txt  main.cpp
examples/sample_player/: CMakeLists.txt  build.sh  main.cpp
experiments/adc_sample_player/: CMakeLists.txt
experiments/midi_cc/: CMakeLists.txt  analog_control.cpp  analog_control.h  main.cpp  midi_cc_observer.h  observers.h
experiments/midi_sample_player/: CMakeLists.txt  build.sh  main.cpp  samples.h
experiments/pizza_example/: CMakeLists.txt  drum_pizza_hardware.h  drum_pizza_pins.h  main.cpp  midi.h  pizza_controls.cc  pizza_controls.cpp  pizza_controls.h  pizza_display.cpp  pizza_display.h  sequencer.h
experiments/sample_player/: CMakeLists.txt  build.sh  crusher.h  main.cpp  samples.h
musin/: CMakeLists.txt  MUSIN.md  generic_sources.cmake  musin.cmake  musin_init.cmake  musin_paths.cmake  observer.h  pico_uart.cpp  pico_uart.h  version.cmake
musin/audio/: AudioStream.cpp  AudioStream.h  aic3204.c  aic3204.h  aic3204_codec.cpp  aic3204_codec.h  attack_buffering_sample_reader.h  audio_i2s_rx.pio  audio_input.cpp  audio_input.h  audio_memory_reader.cpp  audio_memory_reader.h  audio_output.cpp  audio_output.h  bitcrusher.cpp  bitcrusher.h  block.h  buffer_source.h  buffered_reader.h  codec.h  cpu_copier.h  crusher.cpp  crusher.h  data_ulaw.c  dspinst.h  dspinst_out.h  file_reader.h  filter.cpp  filter.h  filter_variable.cpp  filter_variable.h  line_in_source.h  memory_reader.h  mixer.cpp  mixer.h  pcm_decoder.h  pcm_reader.h  pitch_shifter.cpp  pitch_shifter.david.h  pitch_shifter.h  (+7 more)
musin/boards/: dato_pizza.cpp  dato_pizza.h  dato_submarine.cmake  dato_submarine.h  drum_pizza.cpp  drum_pizza.h
musin/drivers/: aic3204.c  aic3204.cpp  aic3204.h  aic3204.hpp  ws2812-dma.h  ws2812.cpp  ws2812.h
musin/filesystem/: audio_safe_flash.cpp  audio_safe_flash.h  filesystem.cpp  filesystem.h  flash_guard.h  partition_flash_block_device.cpp  partition_flash_block_device.h  partition_manager.cpp  partition_manager.h  safe_flash_block_device.cpp  safe_flash_block_device.h  storage_region.h
musin/flash/: firmware_writer.cpp  firmware_writer.h  uf2_parser.h
musin/hal/: UART.cpp  UART.h  adc_defs.cpp  adc_defs.h  analog_in.cpp  analog_in.h  analog_mux_scanner.cpp  analog_mux_scanner.h  audio_i2s.c  debug_utils.cpp  debug_utils.h  gpio.cpp  gpio.h  internal_clock.cpp  internal_clock.h  logger.h  null_logger.cpp  null_logger.h  pico_dma_copier.h  pico_logger.cpp  pico_logger.h  ws2812.cpp  ws2812.h
musin/midi/: midi_common.h  midi_input_queue.cpp  midi_input_queue.h  midi_message_queue.cpp  midi_message_queue.h  midi_output_queue.cpp  midi_output_queue.h  midi_sender.cpp  midi_sender.h  midi_wrapper.cpp  midi_wrapper.h  sysex_chunk.h
musin/settings/: settings_manager.cpp  settings_manager.h
musin/teensy_audio/: mixer.h
musin/timestretched/: AudioSampleGong.h  sample_reader.h
musin/timing/: clock_event.h  clock_multiplier.cpp  clock_multiplier.h  clock_router.cpp  clock_router.h  i_clock.h  i_clock_observer.h  internal_clock.cpp  internal_clock.h  midi_clock_out.cpp  midi_clock_out.h  midi_clock_processor.cpp  midi_clock_processor.h  pico_clock.cpp  pico_clock.h  sequencer_tick_event.h  speed_adapter.cpp  (+18 more)
musin_test/: CMakeLists.txt  pitch_shifter_test.cpp  run_tests.sh
sb25_drum/: CMakeLists.txt  TempoHandler.h  audio_engine.cpp  audio_engine.h  clock_event.h  debug_utils.cpp  debug_utils.h  drum_pizza_hardware.h  events.h  internal_clock.cpp  internal_clock.h  main.cpp  midi.cpp  midi.h  midi_functions.cpp  midi_functions.h  pizza_controls.cpp  pizza_controls.h  pizza_display.cpp  pizza_display.h  sb25_samples.h  sequencer_controller.cpp  sequencer_controller.h  sequencer_tick_event.h  sound_router.cpp  sound_router.h  step_sequencer.h  tempo_event.h  tempo_handler.cpp  tempo_handler.h  tempo_multiplier.cpp  tempo_multiplier.h
testmachine/: CMakeLists.txt  README.md  build.sh  drum_pizza_hardware.h  main.cpp  midi_manager.cpp  midi_manager.h  pizza_controls.cpp  production-testmachine-plan.md  status_display.cpp  status_display.h  system_state_machine.h  test_midi_manager.cpp  test_midi_manager.h
(+594 files in other folders)
